--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Rose&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  // overflow-x: hidden;
+  // border: 1px solid red !important;
 }
 
 .App {
   width: 100vw;
   display: block;
   height: auto;
-  padding: 2rem 4rem 0;
-
+  //   padding: 2rem 4rem 0;
+  font-family: "Red Rose", cursive;
   color: #434343;
   background-color: #f5f5f5;
 
-  border: 2px solid red;
+  //   border: 2px solid red;
 }
