--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,15 +1,19 @@
 footer {
   background-color: #1d1d1e;
+  width: 100%;
   display: flex;
+
+  gap: 1rem;
+
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  margin: 1rem -4rem 0rem;
+
   padding: 2rem 4rem;
   color: white;
   //   width: 100vw;
 
   div {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
