--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 header {
   width: 100%;
   margin-bottom: 5rem;
-
+  padding: 2rem 4rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
