--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -22,6 +22,10 @@ header {
     padding: 10px;
 
     // border: 2px solid red;
+    a {
+      display: block;
+      text-decoration: none;
+    }
 
     @media screen and (max-width: 1000px) {
       column-gap: 2rem;
