--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@
 body {
   font-family: "Red Rose", cursive;
   color: #434343;
-  background-color: #f5f5f5;
+  background-color: white;
   width: 100vw;
   overflow-x: hidden;
   //
