--- a/src/pages/Market/market.scss
+++ b/src/pages/Market/market.scss
@@ -1,6 +1,7 @@
 .nav {
   width: 100%;
   display: flex;
+flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   border: 1px solid red;
