--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@ body {
   width: auto;
   display: block;
 
-  //   padding: 2rem 4rem 0;
+  padding: 2rem 4rem 0rem;
 
   //   border: 2px solid red;
 }
