--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,7 @@ header {
   width: auto;
 
   margin-bottom: 5rem;
-  padding: 2rem 4rem;
+  // padding: 2rem 0rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
