--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: auto;
 
-  padding: 0 4rem;
+  // padding: 0 4rem;
   justify-content: space-between;
 
   gap: 10px;
@@ -110,7 +110,8 @@
 }
 
 .banner {
-  width: auto;
+  width: calc(100% + 8rem);
+  margin: 2rem -4rem;
 
   display: flex;
   justify-content: space-evenly;
@@ -118,7 +119,6 @@
   background-color: #a02279;
   color: white;
   padding: 15px;
-  margin-block: 2rem;
   div {
     display: flex;
     align-items: center;
@@ -135,7 +135,7 @@
   flex-direction: column;
   justify-content: center;
   row-gap: 1rem;
-  padding: 2rem 4rem;
+  padding-block: 2rem;
   text-align: center;
   will-change: transform;
   transition: all 0.3s ease-in;
@@ -148,11 +148,11 @@
     width: 100%;
     gap: 1rem;
 
-    div {
-      width: 300px;
-      height: 400px;
+    .card_div {
+      width: 250px;
+      height: 350px;
       border-radius: 15px;
-      border: none;
+      border: 1px solid #d7d7d7;
       will-change: transform;
       transition: all 0.3s ease-in;
       display: flex;
