--- a/src/App.scss
+++ b/src/App.scss
@@ -1,23 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Rose&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  // border: 1px solid red !important;
-}
-body {
-  font-family: "Red Rose", cursive;
-  color: #434343;
-  background-color: white;
-  width: 100vw;
-  overflow-x: hidden;
-  //
-}
 .App {
   width: auto;
-  display: block;
+  // overflow: hidden;
 
-  padding: 2rem 4rem 0rem;
+  //   padding: 2rem 4rem 0;
 
-  //   border: 2px solid red;
+  // border: 2px solid red;
 }
