--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,11 +1,11 @@
 footer {
   background-color: #1d1d1e;
-  width: calc(100% + 8rem);
-  margin: 0rem -4rem;
-
+  width: auto;
   display: flex;
 
-  // flex-wrap: wrap;
+  gap: 1.5rem;
+
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 
@@ -13,8 +13,8 @@ footer {
   color: white;
   //   width: 100vw;
 
+  // border: 2px solid green;
   div {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -30,13 +30,7 @@ footer {
     }
   }
 
-  // @media screen and (max-width: 550px) {
-  //   // flex-direction: column;
-  //   // row-gap: 2rem;
-  //   padding-inline: auto;
-
-  //   // div {
-  //   //   align-items: center;
-  //   // }
-  // }
+  @media screen and (max-width: 400px) {
+    padding-inline: 2rem;
+  }
 }
