--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Red+Rose:wght@400;500;600;700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Red Rose", cursive;
+  color: #333333;
+  background-color: white;
+  width: 100vw;
+  max-width: 100vw;
+  /* overflow-x: hidden; */
 }
