--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -5,7 +5,6 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-  border: 2px solid red;
 }
 
 .modal-main {
@@ -25,6 +24,9 @@
   border: none;
   border-radius: 16px;
 
+  @media screen and (max-width: 800px) {
+    width: 70%;
+  }
   .modal_header {
     width: 100%;
     display: flex;
