--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -165,6 +165,7 @@
     gap: 1rem;
 
     .card_div {
+      position: relative;
       width: 250px;
       height: 350px;
       border-radius: 15px;
@@ -178,11 +179,32 @@
       padding: 10px;
       gap: 0.5rem;
       background-color: white;
+
       img {
         width: 100%;
         height: 75%;
         border-radius: 15px;
         object-fit: cover;
+      }
+
+      .heart {
+        position: absolute;
+        top: 18px;
+        right: 18px;
+
+        svg {
+          path {
+            transition: all 0.4s ease;
+          }
+        }
+        &:hover {
+          svg {
+            path {
+              fill: red;
+              stroke: red;
+            }
+          }
+        }
       }
       .details {
         width: 100%;
