--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -6,18 +6,19 @@ footer {
   gap: 1.5rem;
 
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
 
   padding: 2rem 4rem;
   color: white;
-  
-  div {
+
+  > div {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: center;
     row-gap: 1rem;
+
     h4 {
       font-weight: 700;
     }
@@ -28,7 +29,31 @@ footer {
     }
   }
 
+  .footer_logo {
+    gap: 3rem;
+    img {
+      width: 70%;
+    }
+    .socials {
+      width: 100%;
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-start;
+      gap: 3.5rem;
+
+      span {
+        display: flex;
+        align-items: center;
+        column-gap: 1rem;
+      }
+    }
+    @media screen and (max-width: 430px) {
+      order: 4;
+    }
+  }
+
   @media screen and (max-width: 400px) {
     padding-inline: 2rem;
+    align-items: center;
   }
 }
