--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -66,14 +66,6 @@
     }
   }
 
-  //   img {
-  //     width: 400px;
-  //     // max-width: 500px;
-  //     // max-width: 400px;
-  //     // height: 459px;s
-  //     // object-fit: cover;
-  //   }
-
   .img_wrapper {
     width: 100%;
     img {
@@ -115,13 +107,6 @@
 .banner {
   // width: calc(100% + 8rem);
   margin-block: 2rem;
-  // margin-right: -4rem;
-  // margin-left: -4rem;
-
-  // width: 100%;
-  // margin-left: 50%;
-  // transform: translateX(-50%);
-  // max-width: 100%;
 
   display: flex;
   justify-content: space-evenly;
@@ -137,120 +122,79 @@
     display: flex;
     align-items: center;
     column-gap: 4px;
-    // img {
-    //   border: 1px solid red;
-    // }
-  }
-}
-
-.showcase_wrapper {
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  row-gap: 1rem;
-  padding: 2rem 4rem;
-  text-align: center;
-  will-change: transform;
-  transition: all 0.3s ease-in;
-  @media screen and (max-width: 500px) {
-    padding-inline: 2rem;
-  }
-  .showcase {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 100%;
-    gap: 1rem;
-
-    .card_div {
-      position: relative;
-      width: 250px;
-      height: 350px;
-      border-radius: 15px;
-      border: 1px solid #d7d7d7;
-      will-change: transform;
-      transition: all 0.3s ease-in;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px;
-      gap: 0.5rem;
-      background-color: white;
-
-      img {
-        width: 100%;
-        height: 75%;
-        border-radius: 15px;
-        object-fit: cover;
-      }
-
-      .heart {
-        position: absolute;
-        top: 18px;
-        right: 18px;
-
-        svg {
-          path {
-            transition: all 0.4s ease;
-          }
-        }
-        &:hover {
-          svg {
-            path {
-              fill: red;
-              stroke: red;
-            }
-          }
-        }
-      }
-      .details {
-        width: 100%;
-        height: 25%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        // border: 1px solid red;
-        padding: 0;
-        flex-direction: row;
-
-        div {
-          width: 100%;
-          height: 100%;
-          padding: 0;
-
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-start;
-          align-items: flex-start;
-          gap: 0.9rem;
-          span {
-            font-size: 12px;
-            font-weight: 400;
-            text-align: start;
-          }
-        }
-
-        div:nth-child(1) {
-          .rating {
-            // width: 100%;
-            display: flex;
-            flex-direction: row;
-          }
-        }
-        // div:nth-child(2) {
-        //   text-align: start;
-        // }
-      }
-    }
   }
 }
 
 .about {
   width: auto;
-
+  background-color: #a02279;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  display: flex;
   padding: 2rem 4rem;
-  height: 100vh;
+  // height: 100vh;
+  gap: 3rem;
+
+  .about_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 3rem;
+    h1 {
+      font-size: 48px;
+      font-weight: 700;
+    }
+    p {
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 35px;
+    }
+
+    button {
+      border: none;
+      border-radius: 8px;
+      color: #a02279;
+      padding: 10px;
+    }
+
+    @media screen and (max-width: 900px) {
+      align-items: center;
+      h1 {
+        font-size: 40px;
+      }
+      p {
+        text-align: center;
+      }
+      gap: 2rem;
+    }
+  }
+
+  .img_wrapper {
+    width: 200%;
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
+
+    @media screen and (max-width: 900px) {
+      width: 100%;
+      img {
+        object-fit: cover;
+      }
+    }
+    // @media screen and (max-width: 600px) {
+    //   width: 100%;
+    // }
+  }
+
+  @media screen and (max-width: 900px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+  }
+  @media screen and (max-width: 500px) {
+    padding-inline: 2rem;
+  }
 }
