feat: dropdown filter button on  place-to-stay page

--- a/src/pages/Market/market.scss
+++ b/src/pages/Market/market.scss
@@ -7,10 +7,94 @@
 
   gap: 2.5rem;
 
-  button {
+  > button {
     padding: 10px;
     background-color: white;
     border-radius: 10px;
     border: none;
+
+    @media screen and (max-width: 900px) {
+      display: none;
+    }
+  }
+
+  .location {
+    border: 1px solid #b4b4b4;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+
+    svg {
+      rotate: 90deg;
+      align-self: flex-end;
+    }
   }
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+
+  .dropbtn {
+    padding: 10px;
+    background-color: white;
+    border-radius: 8px;
+    border: 1px solid #b4b4b4;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+
+    svg {
+      align-self: flex-end;
+      transition: all 0.3s ease;
+    }
+    &:focus {
+      svg {
+        rotate: 180deg;
+      }
+    }
+    &:focus + .dropdown-content {
+      display: block;
+    }
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    width: auto;
+    max-width: 300px;
+    overflow-y: auto;
+    border-radius: 8px;
+    z-index: 1;
+    top: 40px;
+    left: 0;
+  }
+
+  span {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+
+    &:hover {
+      background-color: #ddd;
+    }
+  }
+
+  @media screen and (min-width: 900px) {
+    display: none;
+  }
+}
+
+// .dropbtn:hover,
+// .dropbtn:focus {
+//   background-color: #3e8e41;
+// }
+
+// .show {
+//   display: block;
+// }
