--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -27,9 +27,14 @@ footer {
       color: #f1f3f9;
       font-weight: 400;
     }
+
+    @media screen and (max-width: 430px) {
+      align-items: center;
+    }
   }
 
   .footer_logo {
+    width: min-content;
     gap: 3rem;
     img {
       width: 70%;
@@ -39,21 +44,31 @@ footer {
       display: flex;
       align-items: flex-start;
       justify-content: flex-start;
-      gap: 3.5rem;
-
-      span {
-        display: flex;
-        align-items: center;
-        column-gap: 1rem;
-      }
+      gap: 2.5rem;
     }
+
+    > span {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     @media screen and (max-width: 430px) {
-      order: 4;
+      // order: 4;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
     }
   }
 
+  @media screen and (max-width: 430px) {
+    padding-inline: 2rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
   @media screen and (max-width: 400px) {
     padding-inline: 2rem;
-    align-items: center;
+    // align-items: center;
   }
 }
