--- a/src/components/card/showcase.scss
+++ b/src/components/card/showcase.scss
@@ -8,6 +8,12 @@
   text-align: center;
   will-change: transform;
   transition: all 0.3s ease-in;
+
+  h1 {
+    font-weight: 700;
+    font-size: 48px;
+    color: #000000;
+  }
   @media screen and (max-width: 500px) {
     padding-inline: 2rem;
   }
