style: banner responsiveness

--- a/src/components/card/showcase.scss
+++ b/src/components/card/showcase.scss
@@ -11,7 +11,7 @@
 
   h1 {
     font-weight: 700;
-    font-size: 48px;
+    font-size: 5vmax;
     color: #000000;
   }
   @media screen and (max-width: 500px) {
