--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -30,12 +30,13 @@ header {
     margin-inline: auto;
     align-items: center;
     column-gap: 5rem;
-    // width: auto;
+
     justify-content: center;
     padding: 10px;
 
-    // border: 2px solid red;
     a {
+      color: #434343;
+
       display: block;
       text-decoration: none;
     }
