--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: "Red Rose", cursive;
-  color: #333333;
+  font-weight: 400;
   background-color: white;
   width: 100vw;
   max-width: 100vw;
