--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,3 +1,7 @@
+:root {
+  --color-gradient: linear-gradient(#a02279, #ffc089);
+}
+
 .hero {
   display: flex;
   width: auto;
@@ -22,7 +26,7 @@
     h1 {
       font-size: 56px;
       line-height: 78px;
-      font-weight: 700px;
+      font-weight: 700;
 
       @media screen and (max-width: 400px) {
         font-size: 40px;
@@ -36,6 +40,8 @@
 
     h4 {
       font-weight: 400;
+      font-size: 24px;
+      line-height: 35px;
     }
 
     .input_wrapper {
@@ -51,7 +57,10 @@
         border-top-right-radius: 0px;
         border-bottom-right-radius: 0px;
         width: 65%;
-        // border: 2px solid red;
+
+        &::placeholder {
+          color: #b8b8b8;
+        }
       }
       button {
         background-color: #a02279;
@@ -135,7 +144,7 @@
   color: white;
   display: flex;
   padding: 2rem 4rem;
-  // height: 100vh;
+
   gap: 3rem;
 
   .about_text {
@@ -158,7 +167,7 @@
       border: none;
       border-radius: 8px;
       color: #a02279;
-      padding: 10px;
+      padding: 12px 20px;
     }
 
     @media screen and (max-width: 900px) {
