--- a/src/components/card/showcase.scss
+++ b/src/components/card/showcase.scss
@@ -27,7 +27,7 @@
 
     .card_div {
       position: relative;
-      width: 300px;
+      width: 250px;
       height: 370px;
       border-radius: 15px;
       border: 1px solid #d7d7d7;
@@ -37,7 +37,7 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      padding: 10px;
+      padding: 12px;
       gap: 0.5rem;
       background-color: white;
 
@@ -73,20 +73,19 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        // border: 1px solid red;
-        padding: 0;
+        padding-top: 12px;
+
         flex-direction: row;
 
         div {
-          width: 100%;
+          width: fit-content;
           height: 100%;
-          padding: 0;
 
           display: flex;
           flex-direction: column;
           justify-content: flex-start;
           align-items: flex-start;
-          gap: 0.9rem;
+          gap: 20px;
           span {
             font-size: 12px;
             font-weight: 400;
@@ -94,10 +93,12 @@
           }
         }
 
-        div:nth-child(1) {
+        > div:nth-child(1) {
           .rating {
             display: flex;
             flex-direction: row;
+            // align-items: flex-end;
+            column-gap: 0.6rem;
           }
         }
       }
