--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -5,13 +5,13 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-z-index:2;
+  z-index: 2;
 }
 
 .modal-main {
   position: relative;
   background: white;
-  width: 50%;
+  width: 40%;
 
   height: auto;
   top: 50%;
@@ -67,7 +67,7 @@ z-index:2;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border: none;
+      border: 1px solid #cfd8dc;
       border-radius: 12px;
       width: 100%;
       padding: 12px 20px;
