--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -12,7 +12,7 @@
 header {
   width: auto;
 
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
   padding: 2rem 4rem;
   display: flex;
   align-items: center;
@@ -20,7 +20,7 @@ header {
   @media screen and (max-width: 500px) {
     padding-inline: 2rem;
   }
-  img {
+  > img {
     width: 120px;
   }
 
@@ -29,7 +29,7 @@ header {
     flex-grow: 1;
     margin-inline: auto;
     align-items: center;
-    column-gap: 5rem;
+    column-gap: 4rem;
 
     justify-content: center;
     padding: 10px;
@@ -42,9 +42,9 @@ header {
     }
 
     @media screen and (max-width: 1000px) {
-      column-gap: 2rem;
+      column-gap: 1rem;
     }
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 850px) {
       display: none;
     }
   }
@@ -74,7 +74,7 @@ header {
   transition: left 0s calc(var(--td) * 2), transform 0s calc(var(--td) * 2);
   width: 100vw;
   z-index: 3;
-  @media screen and (min-width: 800px) {
+  @media screen and (min-width: 850px) {
     display: none;
   }
   &::before,
@@ -119,7 +119,7 @@ header {
     cursor: pointer;
     display: block;
 
-    @media screen and (min-width: 800px) {
+    @media screen and (min-width: 850px) {
       display: none;
     }
     span {
@@ -374,7 +374,7 @@ header {
 }
 
 .wallet {
-  @media screen and (max-width: 370px) {
+  @media screen and (max-width: 500px) {
     display: none;
   }
 }
