--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -80,26 +80,27 @@
     img {
       width: 100%;
       object-fit: cover;
-
-      // height: 100%;
-      //   border: 2px solid green;
     }
 
     @media screen and (max-width: 900px) {
       width: 70%;
       img {
+        width: 100%;
+
         object-fit: cover;
       }
     }
     @media screen and (max-width: 600px) {
       width: 100%;
       img {
+        width: 100%;
+
         object-fit: cover;
       }
     }
   }
 
-  @media screen and (max-width: 900px) {
+  @media screen and (max-width: 950px) {
     flex-direction: column;
     align-items: center;
 
