--- a/src/components/card/showcase.scss
+++ b/src/components/card/showcase.scss
@@ -41,6 +41,11 @@
       gap: 0.5rem;
       background-color: white;
 
+      &:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+      }
+
       img {
         width: 100%;
         height: 75%;
