--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -23,13 +23,16 @@ footer {
       font-weight: 700;
       padding-bottom: 6px;
       font-size: 18px;
+      
     }
 
     h6 {
       color: #f1f3f9;
       font-weight: 400;
       font-size: 14px;
+      cursor: pointer;
     }
+   
 
     @media screen and (max-width: 430px) {
       align-items: center;
