--- a/src/pages/Market/market.scss
+++ b/src/pages/Market/market.scss
@@ -13,6 +13,7 @@
     background-color: white;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
 
     @media screen and (max-width: 900px) {
       display: none;
